# tools-oxr

./: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  components.d.ts  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_registry.rs  flv.rs  lib.rs  main.rs
